--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  text-decoration: none;
 }
 body {
   background-color: #1c0c5b;
@@ -12,6 +13,7 @@ body {
   color: #c996cc;
   font-family: "Karla", sans-serif;
   font-weight: 700;
+  text-decoration: none;
 }
 
 .movie-card {
@@ -19,7 +21,6 @@ body {
   background-color: #916bbf;
   border-radius: 3%;
   margin: 20px;
-  justify-content: space-around;
   align-self: center;
   width: 70%;
   height: 400px;
@@ -27,6 +28,7 @@ body {
 }
 .movie-title {
   margin: 10px 0;
+  text-decoration: none;
 }
 .movie-img {
   width: 90%;
@@ -47,12 +49,14 @@ body {
   justify-content: space-between;
   padding: 0 15px;
 }
-
+.movie {
+  font-size: 1rem;
+}
 @media only screen and (min-width: 768px) {
   .movie {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25%, 3fr));
-    margin: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
+    justify-items: center;
   }
 }
 
@@ -60,13 +64,11 @@ body {
   .movie {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50%, 3fr));
-    margin: 10px;
   }
 }
 @media only screen and (max-width: 479px) {
   .movie {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100%, 3fr));
-    margin: 5px;
   }
 }
