--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,14 @@ body {
   align-self: center;
   width: 70%;
   height: 90%;
+
   text-align: center;
 }
 .movie-title {
   margin: 10px 0;
   text-decoration: none;
+  font-family: "Karla", sans-serif;
+  font-size: 500;
 }
 .movie-img {
   width: 90%;
@@ -40,6 +43,8 @@ body {
   text-align: justify;
   margin: 10px 0;
   padding: 0 15px;
+  font-family: "Karla", sans-serif;
+  font-size: 300;
 }
 
 .card-detail {
@@ -57,7 +62,6 @@ body {
 
 .mp-info {
   display: grid;
-
   padding: 0 8%;
   font-family: "Karla", sans-serif;
 }
@@ -70,13 +74,12 @@ button {
   border-width: 1px;
   color: #fff;
   border-color: rgba(171, 24, 126, 1);
-  font-weight: bold;
+  font-weight: 400;
   border-radius: 5px;
   background: rgba(145, 79, 168, 1);
 }
 .movie-cards {
   display: grid;
-
   justify-items: center;
 }
 @media only screen and (min-width: 768px) {
